# jest_rules

./: WORKSPACE
client/: BUILD.bazel  package.json
client/config/: jest.config.js
